--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="./imgMacua/logo.jpg" alt="LogoClassicBurger">
+                    <img src="./img/logo.jpg" alt="LogoClassicBurger">
                 </div>
                 <div class="col-md-4">
                     <h6>classic burger</h6>
@@ -78,14 +78,34 @@
     <div class="container">
         <div class="slider">
             <ul>
-                <li><img src="./imgMacua/comidas/granizadoTosineta.jpg" alt=""></li>
-                <li><img src="./imgMacua/comidas/pechugaPlancha.jpg" alt=""></li>
-                <li><img src="./imgMacua/hamburguesas/haburArosSebolla.jpg" alt=""></li>
-                <li><img src="./imgMacua/perrosCalientes/perroMazorcada.jpg" alt=""></li>                
+                <li><img src="./img/slider/haburArosSebolla.jpg" alt=""></li>
+                <li><img src="./img/slider/IMG-20200210-WA0019.jpg" alt=""></li>
+                <li><img src="./img/slider/pechugaPlancha.jpg" alt=""></li>
+                <li><img src="./img/slider/perroMazorcada.jpg" alt=""></li>                
             </ul>
         </div>
     </div> 
-        
+    <div class="hamburguesas col-md-4">
+        <div class="container">
+            <h6>hamburguesas</h6>
+        </div>
+    </div>
+    <div class="hamburguesas col-md-4">
+        <div class="container">
+            <h6>perros calientes</h6>
+        </div>
+    </div>
+    <div class="hamburguesas col-md-4">
+        <div class="container">
+            <h6>papas locas</h6>
+        </div>
+    </div>
+    <div class="hamburguesas col-md-4">
+        <div class="container">
+            <h6>drinks</h6>
+        </div>
+    </div>
+                   
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
