patron de fondo

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 
                                 <a href="#">
-                                    <i class="fab fa-youtube-square"></i>
+                                    <i class="fab fa-youtube"></i>
                                 </a>
 
 
                                 <a href="#">
-                                    <i class="fab fa-twitter-square"></i>
+                                    <i class="fab fa-twitter"></i>
                                 </a>
 
 
@@ -98,7 +98,7 @@
     </div>
     <div class="container">
        <div class="row">
-        <div class="hamburguesa col-md-7">          
+        <div class="hamburguesa col-md-4">          
             <div id="c-slider">
                 <div id="slider">
                     <section><img src="img/hamburger/doblecarne.jpg" alt="gratinada"></section>
@@ -111,6 +111,9 @@
                 <div id="btn-prev">&#60;</div>
                 <div id="btn-next">&#62;</div>
             </div>
+        </div>
+        <div class="col-md-3">
+
         </div> 
         <div class="col-md-5" id="Ingre">
             <h6>ingredientes</h6>
@@ -126,7 +129,7 @@
     </div>    
     <div class="container">
         <div class="row">
-            <div class="hogdogs col-md-7">
+            <div class="hogdogs col-md-4">
                 <div id="p-slider">
                     <div id="sliPerros">
                         <section><img src="img/perros/desmechadoPerro.jpg" alt="gratinada"></section>
@@ -140,6 +143,9 @@
                     <div id="des_pues">&#62;</div>
                 </div>
              </div>
+             <div class="col-md-3">
+
+            </div> 
              <div class="col-md-5" id="Ingre">
                  <h6>ingredientes</h6>
              </div>
@@ -156,7 +162,7 @@
     </div> 
     <div class="container">
         <div class="row">
-            <div class="papasLocas col-md-7">
+            <div class="papasLocas col-md-4">
                 <div id="l-slider">
                     <div id="sliPapas">
                         <section><img src="img/papas/choripapa.jpg" alt="gratinada"></section>
@@ -170,6 +176,9 @@
                     <div id="des">&#62;</div>
                 </div>
             </div>
+            <div class="col-md-3">
+
+            </div> 
             <div class="col-md-5" id="Ingre">
                 <h6>ingredientes</h6>
             </div>
@@ -177,26 +186,30 @@
     </div> 
     <div class="col-md-6" id="carnes">
         <div class="container">
-            <h6><img src="img/imagenes instagram/logo2.jpg" alt=""> carnes</h6>
+            <h6><img src="img/logo/logo2.jpg" alt=""> carnes</h6>
             <hr color="white pt-0">
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="carnes col-md-7">
+            <div class="carnes col-md-4">
                 <div id="r-slider">
                     <div id="sliCarnes">
-                        <section><img src="img/imagenes instagram/gratinadohambur.jpg" alt="gratinada"></section>
-                        <section><img src="img/imagenes instagram/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburguesaChorizo.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburguesaMazorca.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/costillaRes.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/costillitas.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/pechugaAsada.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/pechugaGratinada.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/hamburger/doblecarne.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/carneAsada.jpg" alt="gratinada"></section>
+
                     </div>
                     <div id="ante">&#60;</div>
                     <div id="desp">&#62;</div>
                 </div>
             </div>
+            <div class="col-md-3">
+
+            </div> 
             <div class="col-md-5" id="Ingre">
                 <h6>ingredientes</h6>
             </div>
@@ -205,28 +218,39 @@
     
     <div class="col-md-6" id="otros">
         <div class="container">
-            <h6><img src="img/imagenes instagram/logo2.jpg" alt=""> otros</h6>
+            <h6><img src="img/logo/logo2.jpg" alt=""> otros</h6>
             <hr color="white pt-0" > 
         </div>
     </div>   
     <div class="container">
         <div class="row">
-            <div class="otros col-md-7">
+            <div class="otros col-md-4">
                 <div id="o-slider">
                     <div id="sliOtros">
+                        <section><img src="img/carnes/costillaRes.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/costillitas.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/pechugaAsada.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/carnes/pechugaGratinada.jpg" alt="doblecarneChorizo"></section>
+                        <section><img src="img/hamburger/doblecarne.jpg" alt="doblecarneChorizo"></section>
                         <section><img src="img/carnes/carneAsada.jpg" alt="gratinada"></section>
-                        <section><img src="img/imagenes instagram/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburguesaChorizo.jpg" alt="doblecarneChorizo"></section>
-                        <section><img src="img/imagenes instagram/hamburguesaMazorca.jpg" alt="doblecarneChorizo"></section>
                     </div>
                     <div id="antesd">&#60;</div>
                     <div id="despuesd">&#62;</div>
                 </div>             
             </div>
-            <div class="col-md-5" id="Ingre">
+            <div class="col-md-3">
+
+            </div> 
+            <div class="col-md-5 mt=0" id="Ingre">
                 <h6>ingredientes</h6>
+                <div id="parrOtros">
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                    <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis consequuntur aperiam laboriosam odio blanditiis! Eius!</p></section>
+                </div>
             </div>
         </div>
     </div>   
