--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
         </div> 
         <div class="col-md-5" id="Ingre">
             <h6>ingredientes</h6>
+            <div id="parrafo-slider">
+                <div id="parrafoSider">
+                    <section><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere sunt non culpa recusandae suscipit provident quos at fuga ad omnis vero, veniam quis. Animi fugiat eaque assumenda aperiam dignissimos natus?</p></section>
+                    <section><p>imagen dos</p></section>
+                    <section><p>imgen tres</p></section>
+                    <section><p>imagen cuatro</p></section>
+                    <section><p>imagen cinco</p></section>
+                    <section><p>imagen seis</p></section>
+                </div>                
+            </div>
         </div>    
        </div>          
     </div>
@@ -146,9 +156,19 @@
              <div class="col-md-3">
 
             </div> 
-             <div class="col-md-5" id="Ingre">
-                 <h6>ingredientes</h6>
-             </div>
+            <div class="col-md-5" id="Ingre">
+                <h6>ingredientes</h6>
+                <div id="parrafo-slider">
+                    <div id="parrafoSider">
+                        <section><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere sunt non culpa recusandae suscipit provident quos at fuga ad omnis vero, veniam quis. Animi fugiat eaque assumenda aperiam dignissimos natus?</p></section>
+                        <section><p>imagen dos</p></section>
+                        <section><p>imgen tres</p></section>
+                        <section><p>imagen cuatro</p></section>
+                        <section><p>imagen cinco</p></section>
+                        <section><p>imagen seis</p></section>
+                    </div>                
+                </div>
+            </div> 
         </div>
     </div>   
     
