--- a/index.html
+++ b/index.html
@@ -107,6 +107,23 @@
                     <section><img src="img/hamburger/hamburAroscebolla.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/hamburger/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/doblecarne.jpg" alt="gratinada"></section>
+                    <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburAroscebolla.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/doblecarne.jpg" alt="gratinada"></section>
+                    <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburAroscebolla.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/doblecarne.jpg" alt="gratinada"></section>
+                    <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/hamburger/hamburAroscebolla.jpg" alt="doblecarneChorizo"></section>
+                    
                 </div>
                 <div id="btn-prev">&#60;</div>
                 <div id="btn-next">&#62;</div>
@@ -119,12 +136,28 @@
             <h6>ingredientes</h6>
             <div id="parrafo-slider">
                 <div id="parrafoSider">
-                    <section><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere sunt non culpa recusandae suscipit provident quos at fuga ad omnis vero, veniam quis. Animi fugiat eaque assumenda aperiam dignissimos natus?</p></section>
-                    <section><p>imagen dos</p></section>
-                    <section><p>imgen tres</p></section>
-                    <section><p>imagen cuatro</p></section>
-                    <section><p>imagen cinco</p></section>
-                    <section><p>imagen seis</p></section>
+                    <section><p>BURGER TRADICIONAL: <br> Carne, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER POLLO: <br> Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER MIXTA: <br> Carne, Filete de Pechuga, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>CHORI-BURGER: <br> Carne, Chorizo, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER DOBLE CARNE: <br> Doble Carne, Jamon, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER HAWAIANA: <br> Carne, Pollo desmechado, Encurtido de Pina, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER AMERICANA: <br> Carne, Salchicha Americana, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER DOBLE CARNE ESPECIAL: <br> Doble Carne,Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>CHORI-BURGER ESPECIAL: <br> Carne, Chorizo, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER AMERICANA ESPECIAL: <br> Carne, Salchicha Americana, Filete de Pechuga, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER INDOMABLE ESPECIAL: <br> Triple Carne, Maiz, Tocineta, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER CAMPESINA: <br> Carne, Pollo Desmechado, Maiz Tierno, Tocineta, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER INDOMABLE: <br> Triple Carne, Doble Jamon Ahumado, Doble Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER DE LA CASA: <br> Doble Carne, Doble Filete de Pechuga, Doble Jamon Ahumado, Doble Queso Gratinado, Doble Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER MEXICANA: <br> Carne de res, Jalapenos apanados en queso chedar, Pico de gallo, Salteado en Pimenton, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER CHAMPINONES: <br> Carne de res, Crema de Champinones, Pollo Desmechado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER ARO: <br> Carne de res, Aros de Cebolla apanados, Salchicha Americana en resgo banada en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER ARO ESPECIAL: <br> Carne de res, Aros de cebolla apanados, Pollo Desmechado banado en salsa B.B.Q, Tosineta, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER LA NUESTRA: <br> Carne de res, Huevo frito, Pechuga, Tosineta banada en Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER CERDO: <br> Carne de res, Lomo de Cerdo, Pechuga banada en queso gratinado, Jamon Ahumado, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+                    <section><p>BURGER FUSION: <br> 150Grs de Carne de res, Cubitos de lomo, Cubitos de pechuga, Rebanadas de Chorizo, Queso Gratinado, Arepa, Lechuga, Tomate, Cebolla & Papa Francesa</p></section>
+
                 </div>                
             </div>
         </div>    
