--- a/index.html
+++ b/index.html
@@ -90,12 +90,24 @@
             </ul>
         </div>
     </div>
-    <div class="col-md-6" id="hamburger">
-        <div class="container">
-            <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">hamburguesas</h6>
-        <hr color="white pt-0">
-        </div>        
+    <div class="row">
+        <div class="col-md-6" id="hamburger">
+            <div class="container">
+                <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">hamburguesas</h6>
+            </div>        
+        </div>
+        <div class="col-md-6">
+            <div class="container">
+                <br>
+                <br>
+                <h6><span class="typed"></span></h6>
+                <br>
+            </div>
+        </div>
     </div>
+    <div class="col-md-12">
+        <hr color="white mt-0">
+    </div>   
     <div class="container">
        <div class="row">
         <div class="hamburguesa col-md-4">          
@@ -201,12 +213,24 @@
        </div>          
     </div>    
     <!--PERROS-->
-    <div class="col-md-6" id="Lhamburger">
-        <div class="container">
-            <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">PERROS CALIENTES</h6>
-        <hr color="white pt-0">
-        </div>        
+    <div class="row">
+        <div class="col-md-6" id="Lhamburger">
+            <div class="container">
+                <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">HOT DOGS</h6>
+            </div>        
+        </div>
+        <div class="col-md-6">
+            <div class="container">
+                <br>
+                <br>
+                <h6><span class="Ptyped"></span></h6>
+                <br>
+            </div>
+        </div>
     </div>
+    <div class="col-md-12">
+        <hr color="white mt-0">
+    </div> 
     <div class="container">
        <div class="row">
         <div class="Lhamburguesa col-md-4">          
@@ -288,12 +312,24 @@
        </div>          
     </div>
     <!--CARNES-->
-    <div class="col-md-6" id="Chamburger">
-        <div class="container">
-            <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">PAPAS LOCAS</h6>
-        <hr color="white pt-0">
-        </div>        
+    <div class="row">
+        <div class="col-md-6" id="Chamburger">
+            <div class="container">
+                <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">PAPAS LOCAS</h6>
+            </div>        
+        </div>
+        <div class="col-md-6">
+            <div class="container">
+                <br>
+                <br>
+                <h6><span class="Htyped"></span></h6>
+                <br>
+            </div>
+        </div>
     </div>
+    <div class="col-md-12">
+        <hr color="white mt-0">
+    </div> 
     <div class="container">
        <div class="row">
         <div class="Chamburguesa col-md-4">          
@@ -368,12 +404,24 @@
     </div>
 
     <!--OTROS-->
-    <div class="col-md-6" id="Ohamburger">
-        <div class="container">
-            <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">CARNES</h6>
-        <hr color="white pt-0">
-        </div>        
+    <div class="row">
+        <div class="col-md-6" id="Ohamburger">
+            <div class="container">
+                <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">CARNES</h6>
+            </div>        
+        </div>
+        <div class="col-md-6">
+            <div class="container">
+                <br>
+                <br>
+                <h6><span class="Otyped"></span></h6>
+                <br>
+            </div>
+        </div>
     </div>
+    <div class="col-md-12">
+        <hr color="white mt-0">
+    </div> 
     <div class="container">
        <div class="row">
         <div class="Ohamburguesa col-md-4">          
@@ -451,12 +499,24 @@
     </div>
     
     <!--PAPAS LOCAS-->
-    <div class="col-md-6" id="Hhamburger">
-        <div class="container">
-            <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">OTROS</h6>
-        <hr color="white pt-0">
-        </div>        
+    <div class="row">
+        <div class="col-md-6" id="Hhamburger">
+            <div class="container">
+                <h6><img src="img/logo/logo2.jpg" alt="logoClasicBurger">OTROS</h6>
+            </div>        
+        </div>
+        <div class="col-md-6">
+            <div class="container">
+                <br>
+                <br>
+                <h6><span class="Ctyped"></span></h6>
+                <br>
+            </div>
+        </div>
     </div>
+    <div class="col-md-12">
+        <hr color="white mt-0">
+    </div> 
     <div class="container">
        <div class="row">
         <div class="Hhamburguesa col-md-4">          
@@ -532,6 +592,9 @@
          </div>   
        </div>          
     </div>
+    <a class="appWhatsapp" href="https://api.whatsapp.com/send?=phone=573017524611&text=Hola!&nbsp;me&nbsp;comunico&nbsp;de&nbsp;la&nbsp;pagina&nbsp;web"> 
+        <img src="img/logo/whatsapp.jpg" alt="">
+    </a>
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>
@@ -559,11 +622,15 @@ logged_in_greeting="pedido desde la web..."
 logged_out_greeting="pedido desde la web...">
     </div>
 
-   
-   <script>
-        console.log("si sirve")
-    </script>
-    <script src="js/slider.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+   <script src="js/typed.js"></script>
+   <script src="js/Ptyped.js"></script>
+   <script src="js/Ctyped.js"></script>
+   <script src="js/Otyped.js"></script>
+   <script src="js/Htyped.js"></script>
+
+ 
+   <script src="js/slider.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
