--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <section><img src="img/hamburger/solopollo.jpg" alt="solopollo"></section>
                     <section><img src="img/hamburger/mixta.jpg" alt="mixta"></section>
                     <section><img src="img/hamburger/choriBurger.jpg" alt="choriBurger"></section>
-                    <section><img src="img/hamburger/dobleCarne.jpg" alt="doblecarne"></section>
+                    <section><img src="img/hamburger/doblecarne.jpg" alt="doblecarne"></section>
                     <section><img src="img/hamburger/hawaiana.jpg" alt="hawaiana"></section>
                     <section><img src="img/hamburger/americana.jpg" alt="americana"></section>
                     <section><img src="img/hamburger/dobleCarneEspecial.jpg" alt="dobleCarneEspecial"></section>
@@ -523,12 +523,12 @@
                 <div id="Hslider">                  
                     <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/hamburAroscebolla.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/otros/pataconDeLaCasa.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/hamburger/hamburChoDoble.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/doblecarne.jpg" alt="gratinada"></section>
+                    <section><img src="" alt="doblecarneChorizo"></section>
+                    <section><img src="img/otros/desgranadoMixto.jpg" alt="gratinada"></section>
                     <section><img src="img/hamburger/hamburgerAlitaspollo.jpg" alt="doblecarneChorizo"></section>
-                    <section><img src="img/hamburger/dobleCarnePechuga.jpg" alt="doblecarneChorizo"></section>
+                    <section><img src="img/otros/morrongoDeLaCasa.jpg" alt="doblecarneChorizo"></section>
                     <section><img src="img/hamburger/hamburGratinada.jpg" alt="doblecarneChorizo"></section>
                 </div>
                 <div id="Hbtn-prev">&#60;</div>
