--- a/carne.html
+++ b/carne.html
@@ -112,6 +112,30 @@
     <script src="js/Ctyped.js"></script>
     <script src="js/Otyped.js"></script>
     <script src="js/Htyped.js"></script>
+    <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v8.0'
+          });
+        };
+  
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+  
+      <!-- Your Chat Plugin code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="116903156824610"
+  theme_color="#0084ff"
+  logged_in_greeting="pedido desde la web..."
+  logged_out_greeting="pedido desde la web...">
+      </div>
  
   
     <script src="js/slider.js"></script>
