--- a/carne.html
+++ b/carne.html
@@ -106,6 +106,9 @@
          </div>    
        </div>          
     </div>
+    <div class="footer">
+        francoDiseñosWeb derechos reservados 
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="js/typed.js"></script>
     <script src="js/Ptyped.js"></script>
