--- a/hamburguesas.html
+++ b/hamburguesas.html
@@ -97,35 +97,35 @@
          </div>
          <div class="iconnos col-md-1">
             <div class="boton-hamburger">
-                 <a href="/hamburguesas.html">
+                 <a href="./hamburguesas.html">
                      <i class="fas fa-hamburger"></i>
                  </a>
             </div>
             <br>
             <br>
             <div class="boton-perros">
-                 <a href="/perros.html">
+                 <a href="./perros.html">
                      <i class="fas fa-hotdog"></i>
                  </a>            
              </div> 
              <br>
              <br>           
              <div class="boton-carnes">
-                 <a href="/carne.html">
+                 <a href="./carne.html">
                      <i class="fas fa-drumstick-bite"></i>
                  </a>
              </div>
              <br>
              <br>
              <div class="papas-fritas">
-                 <a href="/papasLocas.html">
+                 <a href="./papasLocas.html">
                      <i class="fas fa-cloud-meatball"></i>
                  </a>
              </div>
              <br>
              <br>
              <div class="boton-otro">
-                 <a href="/otros.html">
+                 <a href="./otros.html">
                      <i class="fas fa-folder-plus"></i>
                  </a>
              </div>
